--- a/profil_himsi.html
+++ b/profil_himsi.html
@@ -120,6 +120,112 @@
                     <h1><span>Struktur Organisasi</span></h1>
                     <div id="garis"></div>
                 </div>
+                <div class="content-struktur-organisasi">
+                    <!-- <div class="row">
+                        
+                    </div> -->
+                    <div class="row">
+                        <div class="col-sm-12 col-md-12">
+                            <ul class="nav nav-pills" id="pills-tab" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#bph" role="tab" aria-controls="pills-home" aria-selected="true">BPH</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#bidang-psdm" role="tab" aria-controls="pills-profile" aria-selected="false">Bidang PSDM</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#bidang-kominfo" role="tab" aria-controls="pills-contact" aria-selected="false">Bidang Kominfo</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#bidang-dikti" role="tab" aria-controls="pills-contact" aria-selected="false">Bidang DIKTI</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#bidang-urt" role="tab" aria-controls="pills-contact" aria-selected="false">Bidang URT</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#bidang-adkesma" role="tab" aria-controls="pills-contact" aria-selected="false">Bidang ADKESMA</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- <hr /> -->
+                    <div class="row">
+                        <div class="tab-content" id="pills-tabContent" style="padding-top: 5px;">
+                            <div class="tab-pane fade show active" id="bph" role="tabpanel" aria-labelledby="pills-home-tab">
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-5">
+                                        <img src="assets/image/Bidang/adkesma.png"></img>
+                                    </div>
+                                    <div class="col-sm-12 col-md-7 my-auto">
+                                        <!-- <img src=""></img> -->
+                                        <!-- <h2 class="tujuan_fungsi"><span>Tujuan</span></h2> -->
+                                        <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bertujuan untuk membentuk mahasiswa yang berakhlaqul karimah, terampil, berwawasan luas dan memiliki intergrasi yang tinggi dalam membangun agama, bangsa dan negara.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="bidang-psdm" role="tabpanel" aria-labelledby="pills-profile-tab">
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-5">
+                                        <img src="assets/image/Bidang/psdm.png"></img>
+                                    </div>
+                                    <div class="col-sm-12 col-md-7 my-auto">
+                                        <!-- <img src=""></img> -->
+                                        <!-- <h2 class="tujuan_fungsi"><span>Tujuan</span></h2> -->
+                                        <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bertujuan untuk membentuk mahasiswa yang berakhlaqul karimah, terampil, berwawasan luas dan memiliki intergrasi yang tinggi dalam membangun agama, bangsa dan negara.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="bidang-kominfo" role="tabpanel" aria-labelledby="pills-contact-tab">
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-5">
+                                        <img src="assets/image/Bidang/kominfo.png"></img>
+                                    </div>
+                                    <div class="col-sm-12 col-md-7 my-auto">
+                                        <!-- <img src=""></img> -->
+                                        <!-- <h2 class="tujuan_fungsi"><span>Tujuan</span></h2> -->
+                                        <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bertujuan untuk membentuk mahasiswa yang berakhlaqul karimah, terampil, berwawasan luas dan memiliki intergrasi yang tinggi dalam membangun agama, bangsa dan negara.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="bidang-dikti" role="tabpanel" aria-labelledby="pills-home-tab">
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-5">
+                                        <img src="assets/image/Bidang/dikti.png"></img>
+                                    </div>
+                                    <div class="col-sm-12 col-md-7 my-auto">
+                                        <!-- <img src=""></img> -->
+                                        <!-- <h2 class="tujuan_fungsi"><span>Tujuan</span></h2> -->
+                                        <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bertujuan untuk membentuk mahasiswa yang berakhlaqul karimah, terampil, berwawasan luas dan memiliki intergrasi yang tinggi dalam membangun agama, bangsa dan negara.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="bidang-urt" role="tabpanel" aria-labelledby="pills-profile-tab">
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-5">
+                                        <img src="assets/image/Bidang/urt.png"></img>
+                                    </div>
+                                    <div class="col-sm-12 col-md-7 my-auto">
+                                        <!-- <img src=""></img> -->
+                                        <!-- <h2 class="tujuan_fungsi"><span>Tujuan</span></h2> -->
+                                        <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bertujuan untuk membentuk mahasiswa yang berakhlaqul karimah, terampil, berwawasan luas dan memiliki intergrasi yang tinggi dalam membangun agama, bangsa dan negara.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade" id="bidang-adkesma" role="tabpanel" aria-labelledby="pills-contact-tab">
+                                <div class="row">
+                                    <div class="col-sm-12 col-md-5">
+                                        <img src="assets/image/Bidang/adkesma.png"></img>
+                                    </div>
+                                    <div class="col-sm-12 col-md-7 my-auto">
+                                        <!-- <img src=""></img> -->
+                                        <!-- <h2 class="tujuan_fungsi"><span>Tujuan</span></h2> -->
+                                        <p><span>HIMSI UIN Syarif Hidayatullah Jakarta</span> bertujuan untuk membentuk mahasiswa yang berakhlaqul karimah, terampil, berwawasan luas dan memiliki intergrasi yang tinggi dalam membangun agama, bangsa dan negara.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="footer">
@@ -154,4 +260,5 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.js"></script>
 </html>
